--- a/style.css
+++ b/style.css
@@ -767,7 +767,12 @@ footer .footer-content .copyright p{
         justify-content: space-around;
     }
 
-    
+    @media only screen and (max-width:480px) {
+        html{
+          width: 100vw;
+          overflow-x: hidden;
+        }
+    }
 
 }
 
